# texplr-engine

./: CMakeLists.txt  README.md  conanfile.py  pyproject.toml
conan/: macos-debug  macos-release  windows-debug  windows-release
include/texplr/: texplr.h
include/texplr/core/: application.h  core.h
include/texplr/core/surface/: game_window.h  glew_context.h  glfw_context.h
include/texplr/loader/: app_loader.h
src/: texplr.cpp
src/core/: application.cpp
src/core/surface/: game_window.cpp  glew_context.cpp  glfw_context.cpp
src/loader/: app_loader.cpp
